--- a/assets/reader.ejs
+++ b/assets/reader.ejs
@@ -30,10 +30,10 @@
   </div>
 
   <script>
-  // global bariables
+  // global variables
   var book = <%- book %>;
-  var readerWidth = <%- readerWidth %>
-  var readerHeight = <%- readerHeight %>
+  var readerWidth = <%- readerWidth %>;
+  var readerHeight = <%- readerHeight %>;
 
   // should be extracted to module
   var currentChapter = 0;
@@ -47,6 +47,7 @@
 
   // display first chapter
   iframe.contentWindow.document.write(book.chapters[currentChapter].html);
+  paginate(iframe.contentWindow.document.getElementsByTagName('body')[0], readerHeight, readerWidth);
   iframe.contentWindow.document.close();
 
   function prev() {
@@ -54,6 +55,7 @@
     iframe.contentWindow.document.open();
     // display first chapter
     iframe.contentWindow.document.write(book.chapters[currentChapter].html);
+    paginate(iframe.contentWindow.document.getElementsByTagName('body')[0], readerHeight, readerWidth);
     iframe.contentWindow.document.close();
   }
 
@@ -62,7 +64,19 @@
     iframe.contentWindow.document.open();
     // display first chapter
     iframe.contentWindow.document.write(book.chapters[currentChapter].html);
+    paginate(iframe.contentWindow.document.getElementsByTagName('body')[0], readerHeight, readerWidth);
     iframe.contentWindow.document.close();
+  }
+
+  function paginate(body, height, width) {
+    var style = body.currentStyle || window.getComputedStyle(body);
+    var gap = 2 * style.marginLeft.slice(0,-2);
+    var totalHeight = body.offsetHeight;
+    var pageCount = Math.floor(totalHeight/height) + 1;
+    body.style.columnGap = gap + 'px';
+    body.style.width = width * pageCount + 'px';
+    body.style.height = height + 'px';
+    body.style.columnWidth = width-gap + 'px';
   }
 
   </script>
