Fix weird pagination error
Apparently the HTML parser interprets the closing </script> tag even in JavaScript strings, which I wasn't aware of. Fix: base64 encode the html.

--- a/assets/inject.ejs
+++ b/assets/inject.ejs
@@ -11,4 +11,6 @@
   bodyID.style.width = desiredWidth * pageCount + "px";
   bodyID.style.height = desiredHeight + "px";
   bodyID.style.columnWidth = desiredWidth-gap + "px";
+  bodyID.style.overflow = "scroll";
+  document.styleSheets[0].addRule('::-webkit-scrollbar', 'display: none');
 </script>
