--- a/assets/reader.ejs
+++ b/assets/reader.ejs
@@ -45,6 +45,12 @@
   chapterElement.appendChild(iframe);
 
   function navigate(chapter) {
+    if (typeof chapter !== 'number') {
+      chapter = book.chapters.findIndex(e => e.href.slice(5) === chapter);
+    }
+
+    if (chapter < 0) return;
+
     iframe.contentWindow.document.open();
     iframe.contentWindow.document.write(atob(book.chapters[chapter].html));
     paginate(iframe.contentWindow.document, readerHeight, readerWidth);
@@ -81,8 +87,14 @@
     for (var ls = document.links, numLinks = ls.length, i=0; i<numLinks; i++){
       ls[i].onclick = (e) => {
         e.preventDefault();
+
+        var url = document.createElement('a');
+        url.href = e.target.href;
+        navigate(url.pathname, url.hash);
       };
     }
+
+    book.chapters.forEach(e => console.log(e.href));
   }
 
   </script>
