--- a/assets/reader.ejs
+++ b/assets/reader.ejs
@@ -55,6 +55,8 @@
     iframe.contentWindow.document.write(atob(book.chapters[chapter].html));
     paginate(iframe.contentWindow.document, readerHeight, readerWidth);
     iframe.contentWindow.document.close();
+
+    currentChapter = chapter;
   }
 
   // display first chapter
