--- a/assets/reader.ejs
+++ b/assets/reader.ejs
@@ -55,6 +55,7 @@
     if (chapter < 0) return;
 
     iframe.contentWindow.document.open();
+    iframe.contentWindow.window.scrollTo(0, 0);
     iframe.contentWindow.document.write(atob(book.chapters[chapter].html));
     paginate(iframe.contentWindow.document, readerHeight, readerWidth);
     iframe.contentWindow.location.hash = hash || '';
